--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,8 @@ management:
   endpoint:
     health:
       show-details: always  # Provides detailed health info
+  security:
+     enabled:false
 
 eureka:
   client:
