with out sequrity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 jwt.secret=XTrB1IliesfKLiJBtyRTAQvKx4OMg5GNOq7ScYFRsUo=
 server.port=9999
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.boot=DEBUG
 
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
